@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -22,12 +22,13 @@ import static org.apache.pulsar.common.configuration.PulsarConfigurationLoader.i
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertFalse;
 import static org.testng.Assert.assertNotNull;
+import static org.testng.Assert.assertThrows;
 import static org.testng.Assert.assertTrue;
-import static org.testng.Assert.fail;
 
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
+import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
@@ -39,16 +40,19 @@ import org.apache.pulsar.broker.ServiceConfiguration;
 import org.testng.annotations.Test;
 
 public class PulsarConfigurationLoaderTest {
-    public class MockConfiguration implements PulsarConfiguration {
+    public static class MockConfiguration implements PulsarConfiguration {
         private Properties properties = new Properties();
 
-        private String zookeeperServers = "localhost:2181";
-        private String configurationStoreServers = "localhost:2184";
+        private String metadataStoreUrl = "zk:localhost:2181";
+        private String configurationMetadataStoreUrl = "zk:localhost:2184";
         private Optional<Integer> brokerServicePort = Optional.of(7650);
         private Optional<Integer> brokerServicePortTls = Optional.of(7651);
         private Optional<Integer> webServicePort = Optional.of(9080);
         private Optional<Integer> webServicePortTls = Optional.of(9443);
-        private int notExistFieldInServiceConfig = 0;
+
+        // This unused field is intentionally included to test the ignoreNonExistentMember feature of
+        // PulsarConfigurationLoader.convertFrom()
+        private String A_FIELD_THAT_IS_NOT_DECLARED_IN_ServiceConfiguration = "x";
 
         @Override
         public Properties getProperties() {
@@ -62,37 +66,37 @@ public class PulsarConfigurationLoaderTest {
     }
 
     @Test
-    public void testConfigurationConverting() throws Exception {
+    public void testConfigurationConverting() {
         MockConfiguration mockConfiguration = new MockConfiguration();
         ServiceConfiguration serviceConfiguration = PulsarConfigurationLoader.convertFrom(mockConfiguration);
 
         // check whether converting correctly
-        assertEquals(serviceConfiguration.getZookeeperServers(), "localhost:2181");
-        assertEquals(serviceConfiguration.getConfigurationStoreServers(), "localhost:2184");
-        assertEquals(serviceConfiguration.getBrokerServicePort().get(), new Integer(7650));
-        assertEquals(serviceConfiguration.getBrokerServicePortTls().get(), new Integer(7651));
-        assertEquals(serviceConfiguration.getWebServicePort().get(), new Integer(9080));
-        assertEquals(serviceConfiguration.getWebServicePortTls().get(), new Integer(9443));
-
-        // check whether exception causes
-        try {
-            PulsarConfigurationLoader.convertFrom(mockConfiguration, false);
-            fail();
-        } catch (Exception e) {
-            assertEquals(e.getClass(), IllegalArgumentException.class);
-        }
+        assertEquals(serviceConfiguration.getMetadataStoreUrl(), "zk:localhost:2181");
+        assertEquals(serviceConfiguration.getConfigurationMetadataStoreUrl(), "zk:localhost:2184");
+        assertEquals(serviceConfiguration.getBrokerServicePort().get(), Integer.valueOf(7650));
+        assertEquals(serviceConfiguration.getBrokerServicePortTls().get(), Integer.valueOf((7651)));
+        assertEquals(serviceConfiguration.getWebServicePort().get(), Integer.valueOf((9080)));
+        assertEquals(serviceConfiguration.getWebServicePortTls().get(), Integer.valueOf((9443)));
     }
 
     @Test
-    public void testPulsarConfiguraitonLoadingStream() throws Exception {
+    public void testConfigurationConverting_checkNonExistMember() {
+        assertThrows(IllegalArgumentException.class,
+                () -> PulsarConfigurationLoader.convertFrom(new MockConfiguration(), false));
+    }
+
+    // Deprecation warning suppressed as this test targets deprecated methods
+    @SuppressWarnings("deprecation")
+    @Test
+    public void testPulsarConfigurationLoadingStream() throws Exception {
         File testConfigFile = new File("tmp." + System.currentTimeMillis() + ".properties");
         if (testConfigFile.exists()) {
             testConfigFile.delete();
         }
-        final String zkServer = "z1.example.com,z2.example.com,z3.example.com";
+        final String metadataStoreUrl = "zk:z1.example.com,z2.example.com,z3.example.com";
         PrintWriter printWriter = new PrintWriter(new OutputStreamWriter(new FileOutputStream(testConfigFile)));
-        printWriter.println("zookeeperServers=" + zkServer);
-        printWriter.println("configurationStoreServers=gz1.example.com,gz2.example.com,gz3.example.com/foo");
+        printWriter.println("metadataStoreUrl=" + metadataStoreUrl);
+        printWriter.println("configurationMetadataStoreUrl=gz1.example.com,gz2.example.com,gz3.example.com/foo");
         printWriter.println("brokerDeleteInactiveTopicsEnabled=true");
         printWriter.println("statusFilePath=/tmp/status.html");
         printWriter.println("managedLedgerDefaultEnsembleSize=1");
@@ -109,88 +113,126 @@ public class PulsarConfigurationLoaderTest {
         printWriter.println("managedLedgerDigestType=CRC32C");
         printWriter.println("managedLedgerCacheSizeMB=");
         printWriter.println("bookkeeperDiskWeightBasedPlacementEnabled=true");
+        printWriter.println("metadataStoreSessionTimeoutMillis=60");
+        printWriter.println("metadataStoreOperationTimeoutSeconds=600");
+        printWriter.println("metadataStoreCacheExpirySeconds=500");
         printWriter.close();
         testConfigFile.deleteOnExit();
         InputStream stream = new FileInputStream(testConfigFile);
         final ServiceConfiguration serviceConfig = PulsarConfigurationLoader.create(stream, ServiceConfiguration.class);
         assertNotNull(serviceConfig);
-        assertEquals(serviceConfig.getZookeeperServers(), zkServer);
-        assertEquals(serviceConfig.isBrokerDeleteInactiveTopicsEnabled(), true);
+        assertEquals(serviceConfig.getMetadataStoreUrl(), metadataStoreUrl);
+        assertTrue(serviceConfig.isBrokerDeleteInactiveTopicsEnabled());
+
         assertEquals(serviceConfig.getBacklogQuotaDefaultLimitGB(), 18);
         assertEquals(serviceConfig.getClusterName(), "usc");
         assertEquals(serviceConfig.getBrokerClientAuthenticationParameters(), "role:my-role");
-        assertEquals(serviceConfig.getBrokerServicePort().get(), new Integer(7777));
-        assertEquals(serviceConfig.getBrokerServicePortTls().get(), new Integer(8777));
+        assertEquals(serviceConfig.getBrokerServicePort().get(), Integer.valueOf((7777)));
+        assertEquals(serviceConfig.getBrokerServicePortTls().get(), Integer.valueOf((8777)));
         assertFalse(serviceConfig.getWebServicePort().isPresent());
         assertFalse(serviceConfig.getWebServicePortTls().isPresent());
         assertEquals(serviceConfig.getManagedLedgerDigestType(), DigestType.CRC32C);
         assertTrue(serviceConfig.getManagedLedgerCacheSizeMB() > 0);
         assertTrue(serviceConfig.isBookkeeperDiskWeightBasedPlacementEnabled());
+        assertEquals(serviceConfig.getMetadataStoreSessionTimeoutMillis(), 60);
+        assertEquals(serviceConfig.getMetadataStoreOperationTimeoutSeconds(), 600);
+        assertEquals(serviceConfig.getMetadataStoreCacheExpirySeconds(), 500);
     }
 
     @Test
-    public void testPulsarConfiguraitonLoadingProp() throws Exception {
-        final String zk = "localhost:2184";
+    public void testPulsarConfigurationLoadingProp() throws Exception {
+        final String zk = "zk:localhost:2184";
         final Properties prop = new Properties();
-        prop.setProperty("zookeeperServers", zk);
+        prop.setProperty("metadataStoreUrl", zk);
         final ServiceConfiguration serviceConfig = PulsarConfigurationLoader.create(prop, ServiceConfiguration.class);
         assertNotNull(serviceConfig);
-        assertEquals(serviceConfig.getZookeeperServers(), zk);
+        assertEquals(serviceConfig.getMetadataStoreUrl(), zk);
     }
 
     @Test
-    public void testPulsarConfiguraitonComplete() throws Exception {
-        final String zk = "localhost:2184";
+    public void testPulsarConfigurationComplete() throws Exception {
+        final String zk = "zk:localhost:2184";
         final Properties prop = new Properties();
-        prop.setProperty("zookeeperServers", zk);
+        prop.setProperty("metadataStoreUrl", zk);
         final ServiceConfiguration serviceConfig = PulsarConfigurationLoader.create(prop, ServiceConfiguration.class);
-        try {
-            isComplete(serviceConfig);
-            fail("it should fail as config is not complete");
-        } catch (IllegalArgumentException e) {
-            // Ok
+        assertThrows(IllegalArgumentException.class, () -> isComplete(serviceConfig));
+    }
+
+    @Test
+    public void testBackwardCompatibility() throws IOException {
+        File testConfigFile = new File("tmp." + System.currentTimeMillis() + ".properties");
+        if (testConfigFile.exists()) {
+            testConfigFile.delete();
         }
+        try (PrintWriter printWriter = new PrintWriter(new OutputStreamWriter(new FileOutputStream(testConfigFile)))) {
+            printWriter.println("zooKeeperSessionTimeoutMillis=60");
+            printWriter.println("zooKeeperOperationTimeoutSeconds=600");
+            printWriter.println("zooKeeperCacheExpirySeconds=500");
+        }
+        testConfigFile.deleteOnExit();
+        InputStream stream = new FileInputStream(testConfigFile);
+        ServiceConfiguration serviceConfig = PulsarConfigurationLoader.create(stream, ServiceConfiguration.class);
+        stream.close();
+        assertEquals(serviceConfig.getMetadataStoreSessionTimeoutMillis(), 60);
+        assertEquals(serviceConfig.getMetadataStoreOperationTimeoutSeconds(), 600);
+        assertEquals(serviceConfig.getMetadataStoreCacheExpirySeconds(), 500);
+
+        testConfigFile = new File("tmp." + System.currentTimeMillis() + ".properties");
+        if (testConfigFile.exists()) {
+            testConfigFile.delete();
+        }
+        try (PrintWriter printWriter = new PrintWriter(new OutputStreamWriter(new FileOutputStream(testConfigFile)))) {
+            printWriter.println("metadataStoreSessionTimeoutMillis=60");
+            printWriter.println("metadataStoreOperationTimeoutSeconds=600");
+            printWriter.println("metadataStoreCacheExpirySeconds=500");
+            printWriter.println("zooKeeperSessionTimeoutMillis=-1");
+            printWriter.println("zooKeeperOperationTimeoutSeconds=-1");
+            printWriter.println("zooKeeperCacheExpirySeconds=-1");
+        }
+        testConfigFile.deleteOnExit();
+        stream = new FileInputStream(testConfigFile);
+        serviceConfig = PulsarConfigurationLoader.create(stream, ServiceConfiguration.class);
+        stream.close();
+        assertEquals(serviceConfig.getMetadataStoreSessionTimeoutMillis(), 60);
+        assertEquals(serviceConfig.getMetadataStoreOperationTimeoutSeconds(), 600);
+        assertEquals(serviceConfig.getMetadataStoreCacheExpirySeconds(), 500);
+
+        testConfigFile = new File("tmp." + System.currentTimeMillis() + ".properties");
+        if (testConfigFile.exists()) {
+            testConfigFile.delete();
+        }
+        try (PrintWriter printWriter = new PrintWriter(new OutputStreamWriter(new FileOutputStream(testConfigFile)))) {
+            printWriter.println("metadataStoreSessionTimeoutMillis=10");
+            printWriter.println("metadataStoreOperationTimeoutSeconds=20");
+            printWriter.println("metadataStoreCacheExpirySeconds=30");
+            printWriter.println("zooKeeperSessionTimeoutMillis=100");
+            printWriter.println("zooKeeperOperationTimeoutSeconds=200");
+            printWriter.println("zooKeeperCacheExpirySeconds=300");
+        }
+        testConfigFile.deleteOnExit();
+        stream = new FileInputStream(testConfigFile);
+        serviceConfig = PulsarConfigurationLoader.create(stream, ServiceConfiguration.class);
+        stream.close();
+        assertEquals(serviceConfig.getMetadataStoreSessionTimeoutMillis(), 100);
+        assertEquals(serviceConfig.getMetadataStoreOperationTimeoutSeconds(), 200);
+        assertEquals(serviceConfig.getMetadataStoreCacheExpirySeconds(), 300);
     }
 
     @Test
     public void testComplete() throws Exception {
-        TestCompleteObject complete = this.new TestCompleteObject();
+        TestCompleteObject complete = new TestCompleteObject();
         assertTrue(isComplete(complete));
     }
 
     @Test
-    public void testInComplete() throws IllegalAccessException {
-
-        try {
-            isComplete(this.new TestInCompleteObjectRequired());
-            fail("Should fail w/ illegal argument exception");
-        } catch (IllegalArgumentException iae) {
-            // OK, expected
-        }
-
-        try {
-            isComplete(this.new TestInCompleteObjectMin());
-            fail("Should fail w/ illegal argument exception");
-        } catch (IllegalArgumentException iae) {
-            // OK, expected
-        }
-
-        try {
-            isComplete(this.new TestInCompleteObjectMax());
-            fail("Should fail w/ illegal argument exception");
-        } catch (IllegalArgumentException iae) {
-            // OK, expected
-        }
-
-        try {
-            isComplete(this.new TestInCompleteObjectMix());
-            fail("Should fail w/ illegal argument exception");
-        } catch (IllegalArgumentException iae) {
-            // OK, expected
-        }
+    public void testIncomplete() throws IllegalAccessException {
+        assertThrows(IllegalArgumentException.class, () -> isComplete(new TestInCompleteObjectRequired()));
+        assertThrows(IllegalArgumentException.class, () -> isComplete(new TestInCompleteObjectMin()));
+        assertThrows(IllegalArgumentException.class, () -> isComplete(new TestInCompleteObjectMax()));
+        assertThrows(IllegalArgumentException.class, () -> isComplete(new TestInCompleteObjectMix()));
     }
 
-    class TestCompleteObject {
+    static class TestCompleteObject {
         @FieldContext(required = true)
         String required = "I am not null";
         @FieldContext(required = false)
@@ -201,25 +243,24 @@ public class PulsarConfigurationLoaderTest {
         int minValue = 2;
         @FieldContext(minValue = 1, maxValue = 3)
         int minMaxValue = 2;
-
     }
 
-    class TestInCompleteObjectRequired {
+    static class TestInCompleteObjectRequired {
         @FieldContext(required = true)
         String inValidRequired;
     }
 
-    class TestInCompleteObjectMin {
+    static class TestInCompleteObjectMin {
         @FieldContext(minValue = 1, maxValue = 3)
         long inValidMin = 0;
     }
 
-    class TestInCompleteObjectMax {
+    static class TestInCompleteObjectMax {
         @FieldContext(minValue = 1, maxValue = 3)
         long inValidMax = 4;
     }
 
-    class TestInCompleteObjectMix {
+    static class TestInCompleteObjectMix {
         @FieldContext(required = true)
         String inValidRequired;
         @FieldContext(minValue = 1, maxValue = 3)
